@@ -1,0 +1,2 @@
+#!/bin/sh
+xterm -bg SteelBlue4 -fg gray88 -e mono Server_Mono.exe &
